--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">BakingApp</string>
+    <string name="app_name">BakingTime</string>
+    <string name="ingredient_title">Ingredient:</string>
+    Ingredient
 </resources>
